# hellotms

./: .gitignore  AdminLayout_old.tsx  CHANGELOG.md  DEPLOY.md  KEYS_MANAGEMENT.md  README.md  check_demo_data.ts  fetch_portfolio.js  fix-invite.js  fix-settings.js  fix-staff-payload.js  migrate-colors.js  package.json  pnpm-lock.yaml  replace-bg.js  setup_sessions.sql  tsconfig.base.json
.github/workflows/: db-backup.yml  db-restore.yml  deploy-public.yml  deploy-worker.yml
apps/admin/: .env.example  SIGNKEY  admin_tauri.key  admin_tauri.key.pub  build-signed.ps1  build-win.cjs  build_signed.cjs  clean_key.txt  gen_key.js  generate_keys_safe.js  help.txt  index.html  new_key_raw.txt  package.json  sign.ps1  sign_advanced.cjs  sign_fix.cjs  sign_helper.cjs  sign_helper.js  sign_helper2.cjs  sign_helper_final.cjs  sign_master.cjs  sign_pure_node.cjs  sign_tauri.cjs  sign_v2.cjs  tailwind.config.js  temp.env  temp_env.cjs  test_key  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
apps/admin/src-tauri/: Cargo.toml  tauri.conf.json
apps/admin/src-tauri/capabilities/: default.json
apps/admin/src-tauri/icons/: icon.icns
apps/admin/src-tauri/src/: lib.rs
apps/public/: .env.example  next.config.js  next.config.ts  (+4 more)
scratch/: check_team.js  compare_exact_bytes.js  decode_config_key.js  finalize_key_sync.js  match_old_key.js  test_multipage.ts  update_project_detail.py  verify_env_key.js  verify_keys.js
scripts/: debug_key_full.js  debug_trash.js  extract_pubkey.js  find_match_key.js
tmp/: check_projects.ts
(+174 files in other folders)
