[package]
name = "app"
version = "0.1.9"
authors = ["The Marketing Solution <info@themarketingsolution.com.bd>"]
description = "Official Admin Desktop Application for The Marketing Solution (TMS)"
repository = "https://github.com/themarketingsolution/hellotms"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
